# WeatherWise-ME

./: CMakeLists.txt  vcpkg.json
src/: main.cpp
src/models/: weather_data.cpp  weather_data.hpp
src/models/server/: http_server.cpp  http_server.hpp
src/weather_api/: weather_client.cpp
